# pydantic-discriminated

./: CHANGELOG.md  README.md  discriminator_tests.json  mkdocs.yml  publish.sh  pyproject.toml  versions.json
.github/workflows/: docs.yml  publish.yml  test.yml
0.1.10/: 404.html
0.1.10/reference/SUMMARY/: index.html
0.1.10/reference/pydantic_discriminated/: index.html
0.1.10/technical_documentation/: index.html
0.1.11/: index.html
0.1.11/api-reference/: index.html
0.1.11/reference/pydantic_discriminated/api/: index.html
0.1.12/reference/pydantic_discriminated/: index.html
0.1.13/: index.html
0.1.13/reference/pydantic_discriminated/: index.html
0.1.13/reference/pydantic_discriminated/api/: index.html
0.1.2/: sitemap.xml
0.1.2/search/: search_index.json
0.1.20/: objects.inv  sitemap.xml
0.1.20/reference/pydantic_discriminated/: index.html
0.1.21/search/: search_index.json
0.1.21/technical_documentation/: index.html
0.1.23/: 404.html
0.1.23/reference/SUMMARY/: index.html
0.1.23/reference/pydantic_discriminated/api/: index.html
0.1.24/: index.html
0.1.24/api-reference/: index.html
0.1.24/reference/pydantic_discriminated/: index.html
0.1.24/reference/pydantic_discriminated/api/: index.html
0.1.3/: 404.html  index.html
0.1.5/: index.html
0.1.5/search/: search_index.json
0.1.5/technical_documentation/: index.html
0.1.9/: 404.html  index.html  sitemap.xml
0.1.9/api-reference/: index.html
0.1.9/search/: search_index.json
0.1.9/technical_documentation/: index.html
dev_studies/: test_json_args.py
docs/: index.md  technical_documentation.md
src/pydantic-discriminated/: example_discriminated.py  pydantic_discriminated.py
src/pydantic_discriminated/: __init__.py  api.py
tests/: test_complex_structures.py  test_features.py  test_numpydantic.py
