[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantic-discriminated"
version = "0.1.3"
description = "Type-safe discriminated unions for Pydantic models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["pydantic", "discriminated", "unions", "polymorphic", "validation", "serialization"]
authors = [
    {name = "Talbot Knighton", email = "talbotknighton@gmail.org"},
]
maintainers = [
    {name = "Talbot Knighton", email = "talbotknighton@gmail.org"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "mkdocs>=1.4.2",
    "mkdocs-material>=9.2.0",
    "mkdocs-redirects>=1.0.0",
    "hatchling>=1.11.0",
    "mike",
]

[project.urls]
"Homepage" = "https://github.com/talbotknighton/pydantic-discriminated"
"Bug Tracker" = "https://github.com/talbotknighton/pydantic-discriminated/issues"
"Documentation" = "https://github.com/talbotknighton/pydantic-discriminated/blob/main/README.md"

[tool.hatch.build.targets.wheel]
packages = ["pydantic_discriminated"]

[tool.hatch.build.targets.sdist]
include = [
    "pydantic_discriminated",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.pytest.ini_options]
pythonpath = ["."]
minversion = "6.0"
addopts = "--cov=pydantic_discriminated --cov-report=term-missing --cov-report=xml"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
testpaths = ["tests"]
